--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
 
         <!-- Section Bâtiments -->
         <section id="batiments">
-            <h2>Bâtiments gérés</h2>
-            <p>Actuellement, deux bâtiments sont pris en charge :</p>
+            <h2>Bâtiment géré</h2>
+            <p>Actuellement, un seul bâtiment est pris en charge :</p>
             <ul>
-                <li><strong>Bâtiment A</strong> - Le Bâtiment principal de l'IUT</li>
                 <li><strong>Bâtiment E</strong> - Le Bâtiment R&T de l'IUT</li>
             </ul>
         </section>
@@ -77,32 +76,32 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>E208</td>
+                            <td>E101</td>
                             <td>E</td>
                             <td>Salle de TP</td>
                             <td>15</td>
                             <td>Température, Humidité</td>
                         </tr>
                         <tr>
-                            <td>E103</td>
+                            <td>E102</td>
                             <td>E</td>
                             <td>Salle de TP</td>
                             <td>15</td>
-                            <td>Température, Lumière</td>
+                            <td>Humidité, Luminosité</td>
                         </tr>
                         <tr>
-                            <td>A010</td>
-                            <td>A</td>
-                            <td>Salle d'examen</td>
-                            <td>80+</td>
-                            <td>Température, CO₂</td>
-                        </tr>
-                        <tr>
-                            <td>E003</td>
+                            <td>E207</td>
                             <td>E</td>
-                            <td>Salle de cours</td>
-                            <td>30</td>
-                            <td>Humidité, Présence</td>
+                            <td>Salle de TP</td>
+                            <td>15</td>
+                            <td>Luminosité, CO2</td>
+                        </tr>
+                        <tr>
+                            <td>E208</td>
+                            <td>E</td>
+                            <td>Salle de TP</td>
+                            <td>15</td>
+                            <td>Température, CO2</td>
                         </tr>
                     </tbody>
                 </table>
