--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -42,7 +42,7 @@
                 <p>Cette page affiche la dernière mesure enregistrée par chaque capteur présent dans les bâtiments. Les données sont automatiquement mises à jour.</p>
             </div>
 
-            <!-- Conteneur pour les messages d’état (chargement, erreur, etc.) -->
+            <!-- Conteneur pour les messages d'état (chargement, erreur, etc.) -->
             <div class="etat-consultation">
                 <!-- Exemple : <p>Chargement des données...</p> -->
             </div>
