--- a/pages/gantt.html
+++ b/pages/gantt.html
@@ -38,7 +38,7 @@
     <!-- Section Gantt -->
     <section id="gantt">
         <div class="gantt-entete">
-            <h2>📊 Diagramme de Gantt – Planification du projet SAÉ23</h2>
+            <h2>📊 Diagramme de Gantt - Planification du projet SAÉ23</h2>
         </div>
 
         <div class="gantt-image">
@@ -47,18 +47,18 @@
 
         <div class="gantt-synthese">
             <h3>Synthèse de la planification</h3>
-            <p>Le projet SAÉ23 s’est déroulé sur une période de près d’un mois, du <strong>12 mai au 10 juin 2025</strong>, et a été structuré en plusieurs phases clés :</p>
+            <p>Le projet SAÉ23 s'est déroulé sur une période de près d'un mois, du <strong>12 mai au 10 juin 2025</strong>, et a été structuré en plusieurs phases clés :</p>
 
             <ul>
-                <li><strong>12/05 → 19/05 – TP et préparation :</strong> Mise en place de l’environnement, répartition des rôles.</li>
-                <li><strong>20/05 → 26/05 – Conception :</strong> MCD/MPD, Gantt, préparation du Livrable 1.</li>
-                <li><strong>27/05 – Dépôt Livrable 1</strong></li>
-                <li><strong>26/05 → 05/06 – Développement du site :</strong> Création des pages, intégration des données.</li>
-                <li><strong>27/05 → 30/05 – Données capteurs :</strong> Grafana, Node-RED, Livrable 2.</li>
-                <li><strong>02/06 – Dépôt Livrable 2</strong></li>
-                <li><strong>02/06 → 06/06 – Finalisation :</strong> Intégration, version finale, Livrable 3.</li>
-                <li><strong>03/06 – Vérifications finales</strong></li>
-                <li><strong>10/06 – Dépôt Livrable 3 + Oral</strong></li>
+                <li><strong>12/05 → 19/05 - TP et préparation :</strong> Mise en place de l'environnement, répartition des rôles.</li>
+                <li><strong>20/05 → 26/05 - Conception :</strong> MCD/MPD, Gantt, préparation du Livrable 1.</li>
+                <li><strong>27/05 - Dépôt Livrable 1</strong></li>
+                <li><strong>26/05 → 05/06 - Développement du site :</strong> Création des pages, intégration des données.</li>
+                <li><strong>27/05 → 30/05 - Données capteurs :</strong> Grafana, Node-RED, Livrable 2.</li>
+                <li><strong>02/06 - Dépôt Livrable 2</strong></li>
+                <li><strong>02/06 → 06/06 - Finalisation :</strong> Intégration, version finale, Livrable 3.</li>
+                <li><strong>03/06 - Vérifications finales</strong></li>
+                <li><strong>10/06 - Dépôt Livrable 3 + Oral</strong></li>
             </ul>
         </div>
     </section>
