--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="60">
     <title>EnergyWatch - Consultation</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="icon" href="../images/icon.ico" type="image/x-icon">
