--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="pages/administration.php">Administration</a></li>
                 <li><a href="pages/gestion.php">Gestion</a></li>
-                <li><a href="pages/consultation.html">Consultation</a></li>
+                <li><a href="pages/consultation.php">Consultation</a></li>
                 <li><a href="#">Gestion de Projet</a>
                     <ul class="sous-menu">
                         <li><a href="pages/gantt.html">GANTT</a></li>
