--- a/pages/gantt.html
+++ b/pages/gantt.html
@@ -35,7 +35,7 @@
     </header>
 
 <main>
-    <!-- Section Gantt -->
+    <!-- Gantt -->
     <section id="gantt">
         <div class="gantt-entete">
             <h2>📊 Diagramme de Gantt - Planification du projet SAÉ23</h2>
