--- a/pages/mentions-legales.html
+++ b/pages/mentions-legales.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <!-- Page metadata and title -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions légales - EnergyWatch</title>
@@ -9,6 +10,7 @@
 </head>
 <body>
     <header>
+        <!-- Homepage title and navigation toggle button -->
         <a href="../index.html" class="titre-accueil">
             <h1>EnergyWatch</h1>
         </a>
@@ -18,6 +20,7 @@
             <span></span>
         </button>
         <nav id="main-nav">
+            <!-- Main site navigation -->
             <ul>
                 <li><a href="administration.php">Administration</a></li>
                 <li><a href="gestion.php">Gestion</a></li>
@@ -36,11 +39,13 @@
 
     <main>
         <section id="mentions-legales">
+            <!-- Legal notice content section -->
             <h2>📌 Mentions légales</h2>
 
             <p><strong>Nom du site :</strong> EnergyWatch</p>
             <p><strong>Nature :</strong> Ce site a été développé dans le cadre d'un projet pédagogique de l'IUT de Blagnac, pour la SAÉ23 du BUT Réseaux & Télécommunications. Il ne s'agit pas d'un site commercial ou officiel.</p>
         </br>
+            <!-- Team members involved in the project -->
             <p><strong>Équipe projet :</strong></p>
             <ul>
                 <li><strong>Samuel DESCOURS</strong>(<a href="mailto:samuel.descours.iut@gmail.com">samuel.descours.iut@gmail.com</a>)</li>
@@ -55,9 +60,11 @@
         </br>
             <p><strong>Responsable de la publication :</strong> L'équipe projet SAÉ23 - IUT de Blagnac</p>
         </br>
+            <!-- Hosting environment and deployment context -->
             <p><strong>Hébergement :</strong><br>
             Le site est hébergé localement dans un environnement de test via <strong>LAMPP</strong> sur des machines virtuelles <em>Lubuntu GNU/Linux</em>. Aucune publication sur un hébergeur externe n'est réalisée.</p>
         </br>
+            <!-- Technologies used in the development -->
             <p><strong>Technologies utilisées :</strong></p>
             <ul>
                 <li>HTML5 / CSS3 pour la structure et le style</li>
@@ -67,6 +74,7 @@
                 <li>Git & GitHub pour le suivi de version</li>
             </ul>
         </br>
+            <!-- Data privacy and rights -->
             <p><strong>Confidentialité :</strong><br>
             Ce site n'enregistre aucune donnée personnelle.</p>
         </br>
@@ -76,9 +84,11 @@
     </main>
 
     <footer>
+        <!-- Footer with copyright -->
         <p>&copy; 2025 EnergyWatch - Tous droits réservés | <a href="mentions-legales.html">Mentions légales</a></p>
     </footer>
 
+    <!-- Toggle navigation menu with JavaScript -->
     <script>
         document.getElementById('menu-toggle').addEventListener('click', function () {
             const nav = document.getElementById('main-nav');
