--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <p>Ce site a été conçu dans le cadre de la SAÉ23 pour offrir une interface simple et intuitive dédiée à la gestion et à la consultation des données issues des capteurs installés dans les bâtiments de l'IUT.</p>
             </div>
             <ul>
-                <li><strong>Consultation</strong> des mesures (température, humidité...)</li>
-                <li><strong>Gestion</strong> des bâtiments, des salles et des capteurs</li>
-                <li><strong>Accès public</strong> à certaines données via la page Consultation</li>
+                <li><strong><a href="pages/administration.php">Administration</a></strong> des mesures (température, humidité...)</li>
+                <li><strong><a href="pages/gestion.php">Gestion</a></strong> des bâtiments, des salles et des capteurs</li>
+                <li><strong>Accès public</strong> à certaines données via la page <a href="pages/onsultation.php"></a>Consultation</a></li>
             </ul>
         </section>
 
