--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><strong><a href="pages/administration.php">Administration</a></strong> des mesures (température, humidité...)</li>
                 <li><strong><a href="pages/gestion.php">Gestion</a></strong> des bâtiments, des salles et des capteurs</li>
-                <li><strong>Accès public</strong> à certaines données via la page <a href="pages/onsultation.php">Consultation</a></li>
+                <li><strong>Accès public</strong> à certaines données via la page <a href="pages/consultation.php">Consultation</a></li>
             </ul>
         </section>
 
