Site fin Samedi

--- a/pages/syntheses.html
+++ b/pages/syntheses.html
@@ -35,45 +35,50 @@
     </header>
 
     <main>
-        <!-- Carte Selwan -->
-        <div class="card">
-            <h2>Travail de Selwan</h2>
-            <p>Lors de la première séance, Selwan a mis en place une machine virtuelle fonctionnelle avec un serveur XAMPP opérationnel et les conteneurs correctement configurés. Il a rencontré plusieurs problèmes, notamment avec l'accès aux interfaces Web des conteneurs Docker, ce qui a nécessité deux séances pour tout résoudre.</p>
-            <p>Durant la deuxième séance, il a travaillé sur la base de données via PHPMyAdmin avec Joy-Floris Guérin et Paul Montaignac. Ensuite, il a poursuivi avec le livrable 2 : Grafana, Node-RED et InfluxDB.</p>
-            <p>Lors de la dernière séance, il s'est concentré sur le script d'upload des métriques vers PHPMyAdmin, qu'il avait conçu auparavant. Il a également aidé Samuel Descours pour la récupération des données vers son site Web.</p>
-            <p>Il a beaucoup œuvré sur la machine XAMPP et sur PHPMyAdmin malgré les bugs et les difficultés liées aux conteneurs et au script. Le principal obstacle fut la machine virtuelle, tournant sous une ancienne version de Linux avec des modules obsolètes, rendant le débogage complexe.</p>
-        </div>
+        <section>
+            <h2>Synthèse personnelle du travail de chaque membre</h2>
+            <p>Vous trouverez ci-dessous une synthèse personnelle du travail réalisé par chaque membre de l'équipe au cours des différentes séances. Chaque carte présente les missions spécifiques, les difficultés rencontrées et les contributions majeures apportées au projet par chacun.</p>
+            
+            <!-- Carte Selwan -->
+            <div class="card">
+                <h2>Travail de Selwan</h2>
+                <p>Lors de la première séance, Selwan a mis en place une machine virtuelle fonctionnelle avec un serveur XAMPP opérationnel et les conteneurs correctement configurés. Il a rencontré plusieurs problèmes, notamment avec l'accès aux interfaces Web des conteneurs Docker, ce qui a nécessité deux séances pour tout résoudre.</p>
+                <p>Durant la deuxième séance, il a travaillé sur la base de données via PHPMyAdmin avec Joy-Floris Guérin et Paul Montaignac. Ensuite, il a poursuivi avec le livrable 2 : Grafana, Node-RED et InfluxDB.</p>
+                <p>Lors de la dernière séance, il s'est concentré sur le script d'upload des métriques vers PHPMyAdmin, qu'il avait conçu auparavant. Il a également aidé Samuel Descours pour la récupération des données vers son site Web.</p>
+                <p>Il a beaucoup œuvré sur la machine XAMPP et sur PHPMyAdmin malgré les bugs et les difficultés liées aux conteneurs et au script. Le principal obstacle fut la machine virtuelle, tournant sous une ancienne version de Linux avec des modules obsolètes, rendant le débogage complexe.</p>
+            </div>
 
-        <!-- Carte Paul -->
-        <div class="card">
-            <h2>Travail de Paul</h2>
-            <p>Paul a débuté par l'organisation des tâches avec Lilian et Samuel. Ensuite, il a rejoint Selwan et Joy pour travailler sur la base de données via PHPMyAdmin. Par la suite, il a pris en charge l'installation des conteneurs Docker ainsi que la mise en place de Node-RED, InfluxDB et Grafana.</p>
-            <p>Des problèmes ont été rencontrés lors de l'installation des Docker, mais une fois configurés, ils ont fonctionné sans avoir besoin de réinstallation. En fin de projet, Paul a collaboré avec Joy et Lilian pour finaliser Grafana, Node-RED et préparer l'oral de présentation.</p>
-        </div>
+            <!-- Carte Paul -->
+            <div class="card">
+                <h2>Travail de Paul</h2>
+                <p>Paul a débuté par l'organisation des tâches avec Lilian et Samuel. Ensuite, il a rejoint Selwan et Joy pour travailler sur la base de données via PHPMyAdmin. Par la suite, il a pris en charge l'installation des conteneurs Docker ainsi que la mise en place de Node-RED, InfluxDB et Grafana.</p>
+                <p>Des problèmes ont été rencontrés lors de l'installation des Docker, mais une fois configurés, ils ont fonctionné sans avoir besoin de réinstallation. En fin de projet, Paul a collaboré avec Joy et Lilian pour finaliser Grafana, Node-RED et préparer l'oral de présentation.</p>
+            </div>
 
-        <!-- Carte Samuel -->
-        <div class="card">
-            <h2>Travail de Samuel</h2>
-            <p>Lors de la première séance, Samuel a entamé la création du site web. Il a mis en place la structure de base, incluant la page d'accueil et la feuille de style principale. Il a également réalisé le diagramme de Gantt et mis en place le dépôt GitHub du projet afin de centraliser le travail collaboratif.</p>
-            <p>Lors de la deuxième séance, il a poursuivi le développement du site en ajoutant la page des mentions légales. Parallèlement, il a apporté son aide à plusieurs membres de l'équipe selon leurs besoins. En fin de séance, il a travaillé avec Selwan et Lilian pour déployer le site sur le serveur LAMPP de la machine virtuelle.</p>
-            <p>La troisième séance a été consacrée à l'amélioration de l'affichage des données. Samuel a collaboré avec Selwan pour rendre les informations consultables via la page <code>consultation.php</code>, permettant ainsi d'afficher les métriques enregistrées en base.</p>
-            <p>Enfin, lors de la quatrième séance, il a finalisé l'ensemble du site web. Il a tout particulièrement peaufiné le fonctionnement des pages <code>administration.php</code> et <code>gestion.php</code>, en s'assurant qu'elles soient pleinement fonctionnelles et bien intégrées à l'ensemble du projet.</p>
-        </div>
+            <!-- Carte Samuel -->
+            <div class="card">
+                <h2>Travail de Samuel</h2>
+                <p>Lors de la première séance, Samuel a entamé la création du site web. Il a mis en place la structure de base, incluant la page d'accueil et la feuille de style principale. Il a également réalisé le diagramme de Gantt et mis en place le dépôt GitHub du projet afin de centraliser le travail collaboratif.</p>
+                <p>Lors de la deuxième séance, il a poursuivi le développement du site en ajoutant la page des mentions légales. Parallèlement, il a apporté son aide à plusieurs membres de l'équipe selon leurs besoins. En fin de séance, il a travaillé avec Selwan et Lilian pour déployer le site sur le serveur LAMPP de la machine virtuelle.</p>
+                <p>La troisième séance a été consacrée à l'amélioration de l'affichage des données. Samuel a collaboré avec Selwan pour rendre les informations consultables via la page <code>consultation.php</code>, permettant ainsi d'afficher les métriques enregistrées en base.</p>
+                <p>Enfin, lors de la quatrième séance, il a finalisé l'ensemble du site web. Il a tout particulièrement peaufiné le fonctionnement des pages <code>administration.php</code> et <code>gestion.php</code>, en s'assurant qu'elles soient pleinement fonctionnelles et bien intégrées à l'ensemble du projet.</p>
+            </div>
 
-        <!-- Carte Joy -->
-        <div class="card">
-            <h2>Travail de Joy</h2>
-            <p>Lors de la première séance, Joy a contribué à la création de la base de données PHP avec Selwan, puis a commencé à prendre en main Grafana. La deuxième séance a été consacrée à la correction d'un bug avec Docker sur la machine Ubuntu et à la création du Trello avec l'aide de Lilian.</p>
-            <p>La troisième séance a été dédiée au script bash de récupération des données des capteurs vers PHPMyAdmin avec Selwan. Enfin, lors de la dernière séance, elle a participé à la préparation de l'oral, à la création du diaporama, et aux finitions sur Grafana et Node-RED.</p>
-        </div>
+            <!-- Carte Joy -->
+            <div class="card">
+                <h2>Travail de Joy</h2>
+                <p>Lors de la première séance, Joy a contribué à la création de la base de données PHP avec Selwan, puis a commencé à prendre en main Grafana. La deuxième séance a été consacrée à la correction d'un bug avec Docker sur la machine Ubuntu et à la création du Trello avec l'aide de Lilian.</p>
+                <p>La troisième séance a été dédiée au script bash de récupération des données des capteurs vers PHPMyAdmin avec Selwan. Enfin, lors de la dernière séance, elle a participé à la préparation de l'oral, à la création du diaporama, et aux finitions sur Grafana et Node-RED.</p>
+            </div>
 
-        <!-- Carte Lilian -->
-        <div class="card">
-            <h2>Travail de Lilian</h2>
-            <p>Lilian a commencé par créer le diagramme de Gantt avec Samuel. Il a ensuite rejoint le reste de l'équipe pour aider à la conception de la base de données. Il a aussi assisté Joy dans l'organisation du Trello.</p>
-            <p>Il a contribué à résoudre des problèmes sur la machine virtuelle et le serveur, puis a travaillé avec Paul sur Docker. Ensemble, ils ont rencontré plusieurs difficultés, mais sont parvenus à une configuration stable.</p>
-            <p>Enfin, il a participé à l'installation et à la configuration de Node-RED et Grafana, contribuant ainsi à la finalisation du projet.</p>
-        </div>
+            <!-- Carte Lilian -->
+            <div class="card">
+                <h2>Travail de Lilian</h2>
+                <p>Lilian a commencé par créer le diagramme de Gantt avec Samuel. Il a ensuite rejoint le reste de l'équipe pour aider à la conception de la base de données. Il a aussi assisté Joy dans l'organisation du Trello.</p>
+                <p>Il a contribué à résoudre des problèmes sur la machine virtuelle et le serveur, puis a travaillé avec Paul sur Docker. Ensemble, ils ont rencontré plusieurs difficultés, mais sont parvenus à une configuration stable.</p>
+                <p>Enfin, il a participé à l'installation et à la configuration de Node-RED et Grafana, contribuant ainsi à la finalisation du projet.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
